fix spacing differences between text container and image container

--- a/src/App.css
+++ b/src/App.css
@@ -209,6 +209,8 @@
     font-size: 20px;
     letter-spacing: 3.4px;
     line-height: 24px;
+    text-align: left;
+    padding-left: 38.5px;
   }
 
   .nav-text { 
@@ -231,6 +233,10 @@
     font-size: 16px;
     line-height: 19px;
     letter-spacing: 2.7px;
+  }
+
+  .container {
+    margin: 3.75rem 9.7rem; 
   }
 }
 
