--- a/src/Pages/Crew/crew.css
+++ b/src/Pages/Crew/crew.css
@@ -21,6 +21,8 @@
 @media screen and (min-width: 768px) {
 
   .crew-main {
+    background: url("/public/Assets/crew/background-crew-tablet.jpg") no-repeat
+    center center fixed;
     height: 100%;
     min-height: 100vh;
     padding-top: 8.5rem;
@@ -28,13 +30,8 @@
   }
 
   .crew-container {
-    margin: 3.75rem 9.7rem;
+    margin: 3.75rem 5.5rem;
     margin-bottom: 0;
-    /* height: 100vh; */
     max-height: 100%;
-    /* display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between; */
   }
 }
